--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,10 @@
         ],
         "post-update-cmd": [
             "@symfony-scripts"
+        ],
+        "warmup": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
         ]
     },
     "config": {
